# TonexMidi

./: mainwindow.cpp  mainwindow.h  mainwindow.ui
TonexMIDI/: CMakeLists.txt  errors.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
